--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "petrovski-studio",
+  "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
