--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,12 @@
 {
-  "version": 2,
-  "build": {
-    "env": {
-      "NODE_VERSION": "20"
-    }
-  },
-  "routes": [
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
+  "framework": "vite",
+  "rewrites": [
     {
-      "src": "/assets/(.*)",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
